# blocks

./: .gitignore  .pre-commit-config.yaml  README.md  fjblock.py  justfile  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: block-quality-check.yml
blocks/AI_ML/: summary.md
blocks/COMPUTER_VISION/: summary.md
blocks/COMPUTER_VISION/CHANNEL_MERGE/: docstring.json
blocks/COMPUTER_VISION/CHANNEL_SPLIT/: CHANNEL_SPLIT.py  docstring.json
blocks/COMPUTER_VISION/EDGE_DETECTION/: EDGE_DETECTION.py  docstring.json
blocks/COMPUTER_VISION/EXTREMA_DETERMINATION/: docstring.json
blocks/COMPUTER_VISION/GAMMA_ADJUSTMENT/: GAMMA_ADJUSTMENT.py
blocks/COMPUTER_VISION/IMAGE_SMOOTHING/: IMAGE_SMOOTHING.py  docstring.json
blocks/COMPUTER_VISION/IMAGE_SWIRL/: IMAGE_SWIRL.py  block_data.json
blocks/COMPUTER_VISION/LOGARITHMIC_ADJUSTMENT/: LOGARITHMIC_ADJUSTMENT.py  block_data.json
blocks/COMPUTER_VISION/REGION_PROPERTIES/: docstring.json
blocks/COMPUTER_VISION/ROTATE_IMAGE/: ROTATE_IMAGE.py
blocks/CONTROL_FLOW/: summary.md
blocks/DATA/: summary.md
blocks/DEBUGGING/: summary.md
blocks/DSP/: summary.md
blocks/ETL/: summary.md
blocks/HARDWARE/: summary.md
blocks/IMAGE/: summary.md
blocks/MATH/: summary.md
blocks/NUMPY/: summary.md
blocks/SCIPY/: summary.md
cli/: constants.py  logging.py
cli/cmd/: add.py  sync.py
cli/utils/: block_docs.py  block_docs_builder.py  generate_docstring_json.py  overview_docs.py
docs/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
docs/src/: tailwind.css
(+1416 files in other folders)
